<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/ice_cream"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_margin="20dp"
        android:inputType="textCapWords"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/top_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="#ffc77d"
        android:text="@string/toppings"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_input"
        />

    <CheckBox
        android:id="@+id/toppings_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whipped_cream"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:paddingStart="16sp"
        android:paddingEnd="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_text"
        />

    <CheckBox
        android:id="@+id/chocolate_toppings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolate"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/toppings_check_box"
        app:layout_constraintLeft_toLeftOf="parent"


        />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="#ffc77d"
        android:text="@string/quantity"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/chocolate_toppings"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="125dp" />

    <Button
        android:id="@+id/increament_button"
        android:layout_width="40sp"
        android:layout_height="wrap_content"
        android:text="@string/increament"
        android:layout_margin="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quantity"
        android:onClick="increament_quabtity"
        />

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="25sp"
        android:layout_margin="25dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/quantity"
        app:layout_constraintLeft_toRightOf="@id/increament_button"
        />

    <Button
        android:id="@+id/decreament_button"
        android:layout_width="40sp"
        android:layout_height="wrap_content"
        android:text="@string/decreament"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/quantity"
        app:layout_constraintLeft_toRightOf="@id/number"
        android:onClick="decreament_quantity"
        />

    <TextView
        android:id="@+id/order_summery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="#aaf255"
        android:text="@string/order_summery"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/order_button"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="241dp" />

    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="create_order_summery"
        android:text="@string/order"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/increament_button"
        app:layout_constraintLeft_toLeftOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>